--- a/css/style.scss
+++ b/css/style.scss
@@ -444,7 +444,7 @@ body {
     background-color: rgba(244, 244, 244, 0.7);
     background-blend-mode: overlay;
     background-size: cover;
-    min-height: 438px;
+    height: 440px;
 
     display: flex;
     align-items: center;
@@ -453,14 +453,50 @@ body {
 
 .subscrybe-comment {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 28px;
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        gap: 19px;
+    }
 
     &__paragraf {
         color: $bgColorSecond;
-        font-size: 20px;
+        font-size: 16px;
         font-style: italic;
-        width: 486px;
+        width: 390px;
+    }
+
+    &__sign {
+        font-size: 12px;
+        line-height: 14px;
+        font-weight: 300;
+        color: $bgColorSecond;
+    }
+
+    &__sign_font {
+        font-size: 16px;
+        line-height: 26px;
+        font-weight: 700;
+        letter-spacing: 0.025em;
+        color: $colorPink
+    }
+
+    &__pag {
+        display: flex;
+        gap: 10px;
+    }
+
+    &__span {
+        width: 38px;
+        height: 4px;
+        background-color: #d6d6d6;
+    }
+
+    &__span_pink {
+        background-color: $colorPink;
     }
 }
 
