--- a/css/style.css
+++ b/css/style.css
@@ -155,10 +155,6 @@ body {
   top: 32px;
   left: 14px;
 }
-.dropdown_woman::before {
-  top: -9px;
-  left: 45px;
-}
 
 .dropdown::before {
   content: "";
@@ -172,6 +168,11 @@ body {
   top: -9px;
   left: 85px;
   transform: rotate(45deg);
+}
+
+.dropdown_women::before {
+  top: -9px;
+  left: 180px;
 }
 
 .menu {
