--- a/css/style.scss
+++ b/css/style.scss
@@ -182,32 +182,12 @@ body {
     grid-template-rows: 155px 155px;
     grid-template-columns: 1fr 1fr 1fr;
 
-    // width: 846px;
-    // height: 310px;
     padding: 20px;
     background-color: $colortWite;
     border-radius: 5px;
     position: absolute;
 
     border: 1px solid $colorTextSearch;
-    box-sizing: initial;
-
-    &_mv {
-        top: 32px;
-        left: 14px;
-    }
-
-    &_home {
-        width: 245px;
-        top: 32px;
-        left: -70px;
-    }
-
-    &_last {
-        top: 32px;
-        right: 0;
-        left: auto;
-    }
 }
 
 .dropdown::before {
@@ -224,21 +204,7 @@ body {
     transform: rotate(45deg);
 }
 
-.dropdown_women::before {
-    top: -9px;
-    left: 180px;
-}
-
-.dropdown_last::before {
-    top: -9px;
-    left: 730px;
-}
-
-.last:hover{
-    right: 0;
-    left: auto;
-}
-
+// главное меню
 .menu {
     display: flex;
     justify-content: center;
@@ -255,16 +221,18 @@ body {
         list-style: none;
     }
 
+    // активация выпадающего меню при наведении
     &__list:hover .dropdown {
         display: grid;
     }
 
+    // класс всех ссылок по умолчанию
     &__link {
         text-decoration: none;
         color: $colorMainText;
     }
 
-    // выпадающее меню
+    // стиль ссылок в выпадающем меню
     &__link_drop {
         line-height: 28px;
         letter-spacing: 0.025em;
@@ -272,6 +240,7 @@ body {
         text-transform: capitalize;
     }
 
+    // заголовок в блоках товаров
     &__title {
         border-bottom: 1px solid $bgColorMain;
         margin-bottom: 8px;
@@ -282,12 +251,14 @@ body {
         color: #232323;
     }
 
+    // блок внутри меню
     &__item {
         display: flex;
         flex-direction: column;
         width: 235px;
     }
 
+    // позиционирование текста в выпадающем меню
     &__item_mv-dwn {
         grid-column: 2 / 3;
     }
@@ -296,15 +267,6 @@ body {
         grid-column: 3/4;
         grid-row: 1/2;
     }
-
-    &__item_bg {
-        position: absolute;
-    }
-
-    &__item_img {
-        z-index: -1;
-    }
-
 }
 
 // Блок с центральным фото
