--- a/css/style.scss
+++ b/css/style.scss
@@ -174,6 +174,10 @@ body {
     justify-content: center;
 }
 
+.menu__list {
+    position: relative;
+}
+
 // Выпадающий список
 .dropdown {
     display: none;
@@ -191,19 +195,19 @@ body {
     top: 32px;
     left: 65px;
 
-    &_home {
-        left: -75px;
-        grid-template-columns: none;
-        grid-template-rows: none;
-    }
+    // &_home {
+    //     left: -75px;
+    //     grid-template-columns: none;
+    //     grid-template-rows: none;
+    // }
 
-    &_man {
-        left: 14px;
-    }
+    // &_man {
+    //     left: 14px;
+    // }
 
-    &_woman {
-        left: 105px;
-    }
+    // &_woman {
+    //     left: 105px;
+    // }
 
 }
 
@@ -228,8 +232,7 @@ body {
     justify-content: center;
     gap: 48px;
     background-color: $contantWidth;
-
-    position: relative;
+   
 
     &__list {
         line-height: 26px;
@@ -298,19 +301,19 @@ body {
     left: auto;
 }
 
-.last_point:hover .dropdown::before {
-    right: 150px;
-}
+// .last_point:hover .dropdown::before {
+//     right: 150px;
+// }
 
-.kids:hover .dropdown::before {
-    right: 602px;
-    left: auto;
-}
+// .kids:hover .dropdown::before {
+//     right: 602px;
+//     left: auto;
+// }
 
-.acc:hover .dropdown::before {
-    right: 492px;
-    left: auto;
-}
+// .acc:hover .dropdown::before {
+//     right: 492px;
+//     left: auto;
+// }
 
 // Блок с центральным фото
 .hero {
