--- a/css/style.css
+++ b/css/style.css
@@ -77,16 +77,6 @@ body {
   display: flex;
   align-items: center;
 }
-.main-header__button {
-  width: 87px;
-  height: 38px;
-  padding-left: 14px;
-  padding-right: 10px;
-  background-color: #e8e8e8;
-  background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
-  border: 1px solid #e6e6e6;
-  border-radius: 3px 0px 0px 3px;
-}
 .main-header__input {
   height: 38px;
   box-sizing: border-box;
@@ -127,6 +117,18 @@ body {
 
 .store:hover path {
   fill: #f16d7f;
+}
+
+.drop__button {
+  display: flex;
+  width: 87px;
+  height: 38px;
+  padding-left: 14px;
+  padding-right: 10px;
+  background-color: #e8e8e8;
+  background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+  border: 1px solid #e6e6e6;
+  border-radius: 3px 0px 0px 3px;
 }
 
 .navigation {
