--- a/css/style.css
+++ b/css/style.css
@@ -119,16 +119,21 @@ body {
   fill: #f16d7f;
 }
 
-.drop__button {
-  display: flex;
+.drop {
+  padding: 8px 10px 8px 15px;
   width: 87px;
   height: 38px;
-  padding-left: 14px;
-  padding-right: 10px;
+  display: flex;
+  align-items: center;
   background-color: #e8e8e8;
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: 1px solid #e6e6e6;
   border-radius: 3px 0px 0px 3px;
+}
+.drop__summary {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .navigation {
