--- a/css/style.scss
+++ b/css/style.scss
@@ -157,19 +157,36 @@ body {
 
 // выпадающая кнопка в блоке поиска
 .drop {
+    padding: 8px 10px 8px 15px;
+    width: 87px;
+    height: 38px;
 
-    // кнопка обзор
-    &__button {
+    display: flex;
+    align-items: center;
+
+    background-color: $bgColorMain;
+    background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+    border: 1px solid $borderColorSearch;
+    border-radius: 3px 0px 0px 3px;
+
+    &__summary {
         display: flex;
-        width: 87px;
-        height: 38px;
-        padding-left: 14px;
-        padding-right: 10px;
-        background-color: $bgColorMain;
-        background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
-        border: 1px solid $borderColorSearch;
-        border-radius: 3px 0px 0px 3px;
+        align-items: center;
+        gap: 8px;
     }
+
+    // // кнопка обзор
+    // &__button {
+    //     display: flex;
+    //     width: 87px;
+    //     height: 38px;
+    //     padding-left: 14px;
+    //     padding-right: 10px;
+    //     background-color: $bgColorMain;
+    //     background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+    //     border: 1px solid $borderColorSearch;
+    //     border-radius: 3px 0px 0px 3px;
+    // }
 }
 
 // Главная навигация сайта
