--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
   color: #f16d7f;
 }
 
+.menu__link:hover {
+  color: #f16d7f;
+}
+
 /* Общее центрирование */
 .center {
   padding-left: calc(50% - 570px);
@@ -183,7 +187,7 @@ body {
   border-left: 1px solid #a4a4a4;
   border-top: 1px solid #a4a4a4;
   top: -9px;
-  left: 85px;
+  left: 98px;
   transform: rotate(45deg);
 }
 
@@ -251,6 +255,16 @@ body {
 
 .acc:hover .dropdown::before {
   right: 340px;
+  left: auto;
+}
+
+.cntr:hover .dropdown {
+  left: -450px;
+  right: auto;
+}
+
+.cntr:hover .dropdown::before {
+  right: 365px;
   left: auto;
 }
 
