--- a/css/style.scss
+++ b/css/style.scss
@@ -161,8 +161,8 @@ body {
 
 // выпадающая кнопка в блоке поиска
 .drop {
-    padding: 8px 10px 8px 15px;
-    width: 87px;
+    position: relative;
+    padding: 8px 10px 15px;
     height: 38px;
 
     display: flex;
@@ -173,12 +173,23 @@ body {
     border: 1px solid $borderColorSearch;
     border-radius: 3px 0px 0px 3px;
 
-    &__item {
+    &__items {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
         width: 262px;
-        height: 530px;
         background-color: #ffffff;
+        border: 1px solid $borderColorSearch;
         border-radius: 5px;
         z-index: 1;
+        padding: 20px;
+        position: absolute;
+        left: 0;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
     }
 
     &[open] .drop__summary {
@@ -190,19 +201,6 @@ body {
         align-items: center;
         gap: 8px;
     }
-
-    // // кнопка обзор
-    // &__button {
-    //     display: flex;
-    //     width: 87px;
-    //     height: 38px;
-    //     padding-left: 14px;
-    //     padding-right: 10px;
-    //     background-color: $bgColorMain;
-    //     background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
-    //     border: 1px solid $borderColorSearch;
-    //     border-radius: 3px 0px 0px 3px;
-    // }
 }
 
 // Главная навигация сайта
@@ -237,7 +235,7 @@ body {
 
 // псевдоэлемент для создания стрелки указателя
 .dropdown::before {
-    content: '';
+    content: "";
     width: 15px;
     height: 15px;
     display: block;
@@ -256,7 +254,6 @@ body {
     justify-content: center;
     gap: 48px;
     background-color: $contantWidth;
-
 
     &__list {
         line-height: 26px;
@@ -389,12 +386,11 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
-
-    &>div:nth-child(4) {
+    & > div:nth-child(4) {
         grid-row: 2 / 4;
     }
 
-    &>div:nth-child(1) {
+    & > div:nth-child(1) {
         grid-row: 1 / 3;
     }
 
@@ -526,7 +522,6 @@ body {
 
 // текст надо фото слева
 .option-img {
-
     position: relative;
 
     &__text {
@@ -632,7 +627,7 @@ body {
         line-height: 26px;
         font-weight: 700;
         letter-spacing: 0.025em;
-        color: $colorPink
+        color: $colorPink;
     }
 
     &__pag {
@@ -650,7 +645,6 @@ body {
         background-color: $colorPink;
     }
 }
-
 
 .subscrybe-form__text {
     color: $bgColorSecond;
