--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,8 @@ body {
   height: 38px;
   display: flex;
   align-items: center;
+}
+.drop_browse {
   background-color: #e8e8e8;
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: 1px solid #e6e6e6;
@@ -158,6 +160,17 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
+}
+
+.drop__account {
+  background-color: #f16d7f;
+  display: block;
+  border: none;
+  width: 130px;
+  height: 38px;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-size: 15px;
 }
 
 .navigation {
