--- a/css/style.scss
+++ b/css/style.scss
@@ -168,10 +168,13 @@ body {
     display: flex;
     align-items: center;
 
-    background-color: $bgColorMain;
-    background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
-    border: 1px solid $borderColorSearch;
-    border-radius: 3px 0px 0px 3px;
+    // модификатор стиля кнопки Browse
+    &_browse {
+        background-color: $bgColorMain;
+        background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+        border: 1px solid $borderColorSearch;
+        border-radius: 3px 0px 0px 3px;
+    }
 
     &__items {
         display: flex;
@@ -201,6 +204,18 @@ body {
         align-items: center;
         gap: 8px;
     }
+}
+
+.drop__account {
+    background-color: $colorPink;
+    display: block;
+    border: none;
+    width: 130px;
+    height: 38px;
+    box-sizing: border-box;
+
+    color: $colortWite;
+    font-size: 15px;
 }
 
 // Главная навигация сайта
