--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,12 @@ body {
   align-items: center;
 }
 .main-header__account {
-  background-color: #f16d7f;
   display: block;
   border: none;
+  box-sizing: border-box;
   width: 130px;
   height: 38px;
-  box-sizing: border-box;
+  background-color: #f16d7f;
   color: #ffffff;
   font-size: 15px;
 }
@@ -125,7 +125,7 @@ body {
 
 .drop {
   position: relative;
-  padding: 8px 10px 15px;
+  padding: 8px 15px 15px;
   height: 38px;
   display: flex;
   align-items: center;
@@ -135,6 +135,13 @@ body {
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: 1px solid #e6e6e6;
   border-radius: 3px 0px 0px 3px;
+}
+.drop_account {
+  width: 130px;
+  height: 38px;
+  background-color: #f16d7f;
+  color: #ffffff;
+  font-size: 15px;
 }
 .drop__items {
   display: flex;
@@ -161,16 +168,13 @@ body {
   align-items: center;
   gap: 8px;
 }
-
-.drop__account {
-  background-color: #f16d7f;
-  display: block;
-  border: none;
-  width: 130px;
-  height: 38px;
-  box-sizing: border-box;
-  color: #ffffff;
-  font-size: 15px;
+.drop[open] .drop_summary {
+  color: #f16d7f;
+}
+.drop_summary {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .navigation {
