--- a/css/style.css
+++ b/css/style.css
@@ -151,13 +151,20 @@ body {
   flex-direction: column;
   gap: 30px;
   width: 262px;
+  position: absolute;
+  z-index: 1;
+}
+.drop__items_browse {
   background-color: #ffffff;
   border: 1px solid #e6e6e6;
   border-radius: 5px;
-  z-index: 1;
   padding: 20px;
-  position: absolute;
   left: 0;
+}
+.drop__items_account {
+  top: 54px;
+  left: -50%;
+  width: 262px;
 }
 .drop__item {
   display: flex;
