--- a/css/style.scss
+++ b/css/style.scss
@@ -168,12 +168,47 @@ body {
     display: flex;
     align-items: center;
 
+    &__summary {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        cursor: pointer;
+    }
+
     // модификатор стиля кнопки Browse
     &_browse {
         background-color: $bgColorMain;
         background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
         border: 1px solid $borderColorSearch;
         border-radius: 3px 0px 0px 3px;
+    }
+
+    &__items {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 262px;
+        position: absolute;
+        z-index: 1;
+
+        background-color: #ffffff;
+        border: 1px solid $borderColorSearch;
+        border-radius: 5px;
+    }
+
+    &__items_browse {
+        padding: 20px;
+        left: 0;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+    }
+
+    // модификатор изменения цвета при открытии кнопки Обзор
+    &[open] .drop__summary {
+        color: $colorPink;
     }
 
     &[open] {
@@ -188,44 +223,20 @@ body {
         font-size: 15px;
     }
 
-    &__items {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        width: 262px;
-        position: absolute;
-        z-index: 1;
-    }
-    
-    &__items_browse {
-        background-color: #ffffff;
-        border: 1px solid $borderColorSearch;
-        border-radius: 5px;
-        padding: 20px;
-        left: 0;
-    }
-
+    // стили выпадающего меню по кнопке Аккаунт
     &__items_account {
+        padding: 17px;
         top: 54px;
         left: -50%;
-        width: 262px;
     }
 
-    &__item {
-        display: flex;
-        flex-direction: column;
+    &__item-data {
     }
 
-    // модификатор изменения цвета при открытии кнопки Обзор
-    &[open] .drop__summary {
-        color: $colorPink;
+    &__item-text {
     }
-
-    &__summary {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        cursor: pointer;
+    
+    &__item-price {
     }
 
     // модификатор изменения цвета при открытии кнопки Аккаунт
