--- a/css/style.scss
+++ b/css/style.scss
@@ -228,6 +228,7 @@ body {
         padding: 20px 17px;
         top: 54px;
         left: -50%;
+        gap: 0;
     }
 
     &__item_buy {
@@ -272,9 +273,35 @@ body {
         color: #c0c0c0;
     }
 
+    &__span {
+        font-size: 10px;
+    }
+
     &__close {
         padding-top: 39px;
         padding-left: 52px;
+    }
+
+    hr {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        background-color: rgba(237, 237, 237, 0.74);
+        height: 1px;
+        border: none;
+    }
+
+    // Итоговая цена в карточке
+    &__total {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__total_price {
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: $colorMainText;
     }
 
     // модификатор изменения цвета при открытии кнопки Аккаунт
