--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ body {
 .drop__total {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 .drop__total_price {
   font-size: 16px;
@@ -239,6 +240,20 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   color: #222222;
+}
+.drop__button-account {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.drop__button-account_link {
+  text-decoration: none;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 19px 70px;
+  border: 1px solid #f16d7f;
+  box-sizing: border-box;
 }
 
 .navigation {
