--- a/css/style.scss
+++ b/css/style.scss
@@ -294,6 +294,7 @@ body {
     &__total {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 30px;
     }
 
     &__total_price {
@@ -302,6 +303,25 @@ body {
         font-weight: 700;
         text-transform: uppercase;
         color: $colorMainText;
+    }
+
+    // кнопки в аккаунте
+    &__button-account {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__button-account_link {
+        text-decoration: none;
+        line-height: 1.2;
+        font-weight: 700;
+        text-transform: uppercase;
+        // color: $colorPink;
+
+        padding: 19px 70px;
+        border: 1px solid #f16d7f;
+        box-sizing: border-box;
     }
 
     // модификатор изменения цвета при открытии кнопки Аккаунт
