--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,15 @@ body {
   text-transform: uppercase;
 }
 
+.products-item:hover {
+  box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
+}
+
+.products-item:hover .products-item__img-card {
+  filter: brightness(30%);
+  transition: all 0.4s ease-in-out;
+}
+
 .products-button {
   display: flex;
   justify-content: center;
