--- a/css/style.scss
+++ b/css/style.scss
@@ -526,11 +526,11 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
-    & > div:nth-child(4) {
+    &>div:nth-child(4) {
         grid-row: 2 / 4;
     }
 
-    & > div:nth-child(1) {
+    &>div:nth-child(1) {
         grid-row: 1 / 3;
     }
 
@@ -609,6 +609,8 @@ body {
     flex-direction: column;
     gap: 19px;
 
+    position: relative;
+
     img {
         width: 100%;
     }
@@ -628,10 +630,33 @@ body {
         font-weight: 700;
         text-transform: uppercase;
     }
+
+    &__card {
+        position: absolute;
+        top: 98px;
+        width: 100%;
+
+        display: none;
+        justify-content: center;
+        pointer-events: none;
+    }
+
+
+    &__link {
+        display: flex;
+        text-decoration: none;
+        gap: 8px;
+        padding: 8px 15px 8px 8px;
+        background-color: rgba(255, 255, 255, 0.0);
+        border: 1px solid #ffffff;
+        color: $colortWite;
+        pointer-events: all;
+    }
+
 }
 
 .products-item:hover {
-    box-shadow: 0px 5px 8px 0px rgba(0,0,0,0.15);
+    box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
 }
 
 .products-item:hover .products-item__img-card {
