--- a/css/style.scss
+++ b/css/style.scss
@@ -495,7 +495,6 @@ body {
 // текст на главном экране
 .hero-text {
     display: flex;
-    flex-direction: column;
     padding-top: 224px;
     height: 100%;
 
@@ -515,6 +514,18 @@ body {
     &_red {
         color: $colorPink;
     }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__span {
+        border: 8px solid $colorPink;
+        margin-right: 12px;
+        height: 97px;
+        margin-top: 15px;
+    }
 }
 
 // Блок предложения и скидки
@@ -526,11 +537,11 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
-    &>div:nth-child(4) {
+    & > div:nth-child(4) {
         grid-row: 2 / 4;
     }
 
-    &>div:nth-child(1) {
+    & > div:nth-child(1) {
         grid-row: 1 / 3;
     }
 
@@ -652,7 +663,7 @@ body {
         text-decoration: none;
         gap: 8px;
         padding: 8px 15px 8px 8px;
-        background-color: rgba(255, 255, 255, 0.0);
+        background-color: rgba(255, 255, 255, 0);
         border: 1px solid #ffffff;
         color: $colortWite;
         pointer-events: all;
@@ -663,7 +674,6 @@ body {
         transform: scale(1.1);
         box-shadow: 0 0 10px 0 rgba(235, 230, 230, 0.967);
     }
-
 }
 
 .products-item:hover {
